k3s/backend/04-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: backend
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - name: back
      port: 8080
      targetPort: 3333
  type: ClusterIP
